# django_pg8000

./: README.md  pyproject.toml
.github/workflows/: test.yml
django_pg8000/: base.py  creation.py  features.py  introspection.py  operations.py  schema.py
tests/: test_pg8000.py
